--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,91 +1,65 @@
-name: Build & Hot-Deploy (AKS/EKS)
+name: Infra + App Deploy
 
 on:
   push:
-    branches: [ "main" ]
-
-env:
-  AWS_REGION: us-east-1
-  AZURE_REGION: eastus
-  # Use one repo-level secret to toggle cloud: 'azure' or 'aws'
-  CLOUD: ${{ secrets.CLOUD }}
+    branches:
+      - main
+    paths:
+      - 'terraform/**'
+      - 'k8s/**'
+      - 'app/**'
+      - '.github/workflows/deploy.yml'
 
 jobs:
-  build-and-deploy:
+  terraform:
+    name: Provision Infrastructure
     runs-on: ubuntu-latest
-
+    if: contains(github.event.head_commit.message, '[terraform]') || contains(join(github.event.commits.*.modified, ','), 'infra/')
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
 
-      # ---------- Azure ACR ----------
-      - name: Azure Login
-        if: env.CLOUD == 'azure'
-        uses: azure/login@v2
+      - name: Terraform Init
+        run: |
+          cd infra
+          terraform init
+
+      - name: Terraform Apply
+        run: |
+          cd infra
+          terraform apply -auto-approve
+
+  app-deploy:
+    name: Build and Deploy App
+    runs-on: ubuntu-latest
+    needs: [terraform] # Ensure infra is ready before deploy
+    steps:
+      - uses: actions/checkout@v4
+
+      # Build & Push Docker image
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/myapp:${{ github.sha }} ./app
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/myapp:${{ github.sha }}
+
+      # Deploy to AKS
+      - name: Set AKS Context
+        uses: azure/aks-set-context@v3
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          # AZURE_CREDENTIALS is JSON from: az ad sp create-for-rbac --sdk-auth
+          resource-group: ${{ secrets.AKS_RESOURCE_GROUP }}
+          cluster-name: ${{ secrets.AKS_CLUSTER_NAME }}
 
-      - name: ACR Login
-        if: env.CLOUD == 'azure'
-        run: az acr login --name ${{ secrets.AZURE_ACR_NAME }}
-
-      - name: Build & Push (ACR)
-        if: env.CLOUD == 'azure'
+      - name: Deploy to Kubernetes
         run: |
-          IMAGE=${{ secrets.AZURE_ACR_NAME }}.azurecr.io/myapp:${{ github.sha }}
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
-          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-
-      # ---------- AWS ECR ----------
-      - name: Configure AWS
-        if: env.CLOUD == 'aws'
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to ECR
-        if: env.CLOUD == 'aws'
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build & Push (ECR)
-        if: env.CLOUD == 'aws'
-        run: |
-          REG="${{ steps.login-ecr.outputs.registry }}"
-          IMAGE="$REG/${{ secrets.AWS_ECR_REPO_NAME }}:${{ github.sha }}"
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
-          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-
-      # ---------- Configure kubectl ----------
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v4
-
-      - name: Get AKS credentials
-        if: env.CLOUD == 'azure'
-        run: az aks get-credentials --resource-group ${{ secrets.AZURE_RG }} --name ${{ secrets.AZURE_AKS_NAME }} --overwrite-existing
-
-      - name: Get EKS credentials
-        if: env.CLOUD == 'aws'
-        run: aws eks update-kubeconfig --name ${{ secrets.AWS_EKS_NAME }} --region ${{ env.AWS_REGION }}
-
-      # ---------- Deploy (hot, rolling update) ----------
-      - name: Render deployment with image
-        run: |
-          sed "s|<IMAGE_URL>|${IMAGE}|g" k8s/deployment.yaml > k8s/deployment.rendered.yaml
-
-      - name: Apply manifests
-        run: |
-          kubectl apply -f k8s/pvc.yaml
-          kubectl apply -f k8s/service.yaml
-          kubectl apply -f k8s/deployment.rendered.yaml
-
-      - name: Wait for rollout
-        run: kubectl rollout status deployment/myapp --timeout=5m
+          kubectl set image deployment/myapp myapp=${{ secrets.ACR_LOGIN_SERVER }}/myapp:${{ github.sha }} -n default
+          kubectl apply -f k8s/
